# KKpipi_Binned_Fit

./: CMakeLists.txt  README.md  gmon.out
apps/: BinNumberStudy.cpp  BinningOptimizer.cpp  BinningQ.cpp  CMakeLists.txt  ComputeDParameters.cpp  ComputeManyDParameters.cpp  ComputeMeanPhases.cpp  ConvertFlatCoordinates.cpp  CopyRedundantCS.cpp  FastBinningTest.cpp  FitAmplitude.cpp  FitKKpipi.cpp  FitNaiive.cpp  FitNaive.cpp  FitRectangular.cpp  FitSophisticated.cpp  Fitting.cpp  GenerateFlat.cpp  MapStrongPhases.cpp  PlotDParameters.cpp  PoolStudy.cpp  PullStudy.cpp
documentation/: Doxyfile
documentation/html/: Amplitude_8cpp.html  Amplitude_8cpp_source.html  Amplitude_8h.html  Amplitude_8h_source.html  BinList_8cpp.html  BinList_8cpp_source.html  BinList_8h.html  BinList_8h_source.html  BinNumberStudy_8cpp.html  BinNumberStudy_8cpp_source.html  Bin_8cpp.html  Bin_8cpp_source.html  Bin_8h.html  Bin_8h_source.html  CMakeLists_8txt.html  CPParameters_8cpp.html  CPParameters_8cpp_source.html  CPParameters_8h.html  CPParameters_8h_source.html  ComputeDParameters_8cpp.html  ComputeDParameters_8cpp_source.html  ComputeMeanPhases_8cpp.html  ComputeMeanPhases_8cpp_source.html  Constants_8h.html  Constants_8h_source.html  DDecayParameters_8cpp.html  DDecayParameters_8cpp_source.html  DDecayParameters_8h.html  DDecayParameters_8h_source.html  EventList_8cpp.html  EventList_8cpp_source.html  EventList_8h.html  EventList_8h_source.html  Event_8cpp.html  Event_8cpp_source.html  Event_8h.html  Event_8h_source.html  FitGamma_8cpp.html  FitGamma_8cpp_source.html  FitGamma_8h.html  (+112 more)
documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  (+29 more)
documentation/latex/: Amplitude_8cpp.tex  Amplitude_8h.tex  BinList_8cpp.tex  BinList_8h.tex  BinNumberStudy_8cpp.tex  Bin_8cpp.tex  Bin_8h.tex  CMakeLists_8txt.tex  CPParameters_8cpp.tex  CPParameters_8h.tex  ComputeDParameters_8cpp.tex  ComputeMeanPhases_8cpp.tex  Constants_8h.tex  DDecayParameters_8cpp.tex  DDecayParameters_8h.tex  EventList_8cpp.tex  EventList_8h.tex  Event_8cpp.tex  Event_8h.tex  FitGamma_8cpp.tex  FitGamma_8h.tex  FitNaive_8cpp.tex  FitRectangular_8cpp.tex  FitSophisticated_8cpp.tex  Fitter_8cpp.tex  Fitter_8h.tex  Gamma_8cpp.tex  Gamma_8h.tex  Generator_8cpp.tex  Generator_8h.tex  HadronicParameters_8h.tex  KKpipiMath_8cpp.tex  KKpipiMath_8h.tex  Likelihood_8cpp.tex  Likelihood_8h.tex  MapStrongPhases_8cpp.tex  NaivePhaseSpace_8cpp.tex  NaivePhaseSpace_8h.tex  PhaseSpaceParameterisation_8cpp.tex  PhaseSpaceParameterisation_8h.tex  (+48 more)
include/: Amplitude.h  AmplitudeBinningOptimizer.h  AmplitudePhaseSpace.h  Bin.h  BinList.h  CPParamaters.h  CPParameters.h  Constants.h  DDecayParameters.h  Event.h  EventList.h  FitGamma.h  Fitter.h  Gamma.h  Generator.h  KKpipiFit.h  KKpipiMath.h  Likelihood.h  NaiivePhaseSpace.h  NaivePhaseSpace.h  PhaseSpaceParameterisation.h  RectangularPhaseSpace.h  SophisticatedPhaseSpace.h  XYLikelihood.h
src/: Amplitude.cpp  AmplitudeBinningOptimizer.cpp  AmplitudePhaseSpace.cpp  Bin.cpp  BinList.cpp  CMakeLists.txt  CPParameters.cpp  DDecayParameters.cpp  Event.cpp  EventList.cpp  FitGamma.cpp  Fitter.cpp  Gamma.cpp  Generator.cpp  KKpipiFit.cpp  KKpipiMath.cpp  Likelihood.cpp  NaiivePhaseSpace.cpp  NaivePhaseSpace.cpp  PhaseSpaceParameterisation.cpp  RectangularPhaseSpace.cpp  SophisticatedPhaseSpace.cpp  XYLikelihood.cpp
